--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,3 +7,7 @@ ktor {
         modules = [ com.example.ApplicationKt.module ]
     }
 }
+
+auth_config {
+    api_key = "Bearer 71d226120ac3049945494454680141ae"
+}
