change data model FoodDto

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,5 +9,5 @@ ktor {
 }
 
 auth_config {
-    api_key = "Bearer 71d226120ac3049945494454680141ae"
+    api_key = "71d226120ac3049945494454680141ae"
 }
